# mangly-cpp

./: .gitattributes  .gitignore  CMakeLists.txt  LICENSE  README.md  build.sh  samples.txt
.github/workflows/: ci.yml
devdocs/: plans.md  progress.md  testing.md
include/mangly/: cli.hpp  mangler.hpp  mangly.hpp  nodes.hpp  parser.hpp  support.hpp
src/: main.cpp
tests/: CMakeLists.txt  corpus.txt  corpus_loader.hpp  samples.hpp  test_api.hpp  test_cli.cpp  test_corpus.cpp  test_demangle.cpp  test_framework.hpp  test_grammar.cpp  test_main.cpp  test_robustness.cpp  test_roundtrip.cpp  test_stress.cpp
tools/: gen_corpus.py
